<resources>
    <string name="app_name">FuFu</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fufu">FuFu</string>
    <string name="home">Home</string>
    <string name="orders">Orders</string>
    <string name="button_name">demo</string>

    <!--    Constance-->
    <string name="menu">MENU</string>
    <string name="reviews">REVIEWS</string>
    <string name="gallery">GALLERY</string>
    <string name="cart">CART</string>
    <string name="res_btn_menu">Menu</string>
    <string name="res_btn_reviews">Reviews</string>
    <string name="res_btn_images">Images</string>
    <string name="res_btn_map">Map</string>

    <!--    Home Fragment-->
    <string name="deals">Deals</string>
    <string name="shop">Shop</string>
    <string name="food">Food</string>
    <string name="favorite">Favorite</string>
    <string name="travel">Travel</string>
    <string name="food_around_you">Món ăn quanh bạn</string>
    <string name="see_more">Xem thêm</string>
    <string name="maybe_you_like">Có thể bạn thích</string>
    <string name="title_activity_shop">ShopActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_cart">CartActivity</string>

    <!--search string-->
    <string name="food_search_top">Món ăn đề xuất</string>
    <string name="food_search_result">Kết quả</string>

    <!--    Cart Activity    -->
    <string name="order_now">ORDER NOW</string>
</resources>